# maze_horror_game

./: CMakeLists.txt  build.sh
assets/: map_1.txt
src/: main.cpp
src/view/: GameView.cpp  GameView.hpp  defs.hpp  init.cpp
